[package]
name = "jame"
version = "0.1.0"
authors = ["raccoon"]
edition = "2018"

[dependencies]
chrono = "0.4"
serenity = { version = "0.10", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "http", "utils", "rustls_backend"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8"